--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
       # O passo de pack agora cuidará do restore e build
       - name: Empacotar e preparar para publicação
-        run: dotnet pack OpenBaseNetSqlServerCLI.csproj --configuration Release -p:NoDefaultExcludes=true -o ./packages
+        run: dotnet pack OpenBase.CLI.csproj --configuration Release -p:NoDefaultExcludes=true -o ./packages
 
       - name: Publicar no NuGet
         env:
