--- a/OpenBase.CLI.csproj
+++ b/OpenBase.CLI.csproj
@@ -8,17 +8,17 @@
 
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>openbase</ToolCommandName>
-    <PackageId>w3ti.OpenBaseNET.CLI</PackageId>
-    <Version>10.0.4</Version>
+    <PackageId>w3ti.OpenBase.CLI</PackageId>
+    <Version>10.0.0</Version>
     <Authors>w3ti</Authors>
-    <Description>CLI para o template OpenBaseNET SQL Server</Description>
+    <Description>CLI para o template OpenBase</Description>
   </PropertyGroup>
 
   <PropertyGroup>
-    <Title>OpenBaseNET CLI</Title>
-    <PackageTags>dotnet;cli;template;sqlserver;clean-architecture</PackageTags>
-    <PackageProjectUrl>https://github.com/britors/OpenBaseNET.CLI</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/britors/OpenBaseNET.CLI</RepositoryUrl>
+    <Title>OpenBase CLI</Title>
+    <PackageTags>dotnet;cli;clean-architecture</PackageTags>
+    <PackageProjectUrl>https://github.com/britors/OpenBase.CLI</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/britors/OpenBase.CLI</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon> 
     <PackageReadmeFile>README.md</PackageReadmeFile>
