--- a/OpenBase.CLI.csproj
+++ b/OpenBase.CLI.csproj
@@ -8,9 +8,11 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>openbase</ToolCommandName>
     <PackageId>w3ti.OpenBase.CLI</PackageId>
-    <Version>10.0.4</Version>
+    <Version>10.0.5</Version>
     <Authors>w3ti</Authors>
     <Description>CLI para o template OpenBase</Description>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <PropertyGroup>
