--- a/OpenBase.CLI.csproj
+++ b/OpenBase.CLI.csproj
@@ -3,17 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <PackAsTool>true</PackAsTool>
-    <ToolCommandName>openbase</ToolCommandName>
+    <AssemblyName>OpenBase.CLI</AssemblyName>
     <PackageId>w3ti.OpenBase.CLI</PackageId>
-    <Version>10.0.5</Version>
-    <Authors>w3ti</Authors>
-    <Description>CLI para o template OpenBase</Description>
-    <IncludeSymbols>true</IncludeSymbols>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-  </PropertyGroup>
+    <ToolCommandName>openbase</ToolCommandName> 
+    <PackAsTool>true</PackAsTool>
+    <Version>10.0.6</Version> 
+   </PropertyGroup>
 
   <PropertyGroup>
     <Title>OpenBase CLI</Title>
