--- a/OpenBase.CLI.csproj
+++ b/OpenBase.CLI.csproj
@@ -3,12 +3,17 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
-    <AssemblyName>OpenBase.CLI</AssemblyName>
-    <PackageId>w3ti.OpenBase.CLI</PackageId>
-    <ToolCommandName>openbase</ToolCommandName> 
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <PackAsTool>true</PackAsTool>
-    <Version>10.0.6</Version> 
-   </PropertyGroup>
+    <ToolCommandName>openbase</ToolCommandName>
+    <PackageId>w3ti.OpenBase.CLI</PackageId>
+    <Version>10.0.6</Version>
+    <Authors>w3ti</Authors>
+    <Description>CLI para o projeto OpenBase</Description>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>
 
   <PropertyGroup>
     <Title>OpenBase CLI</Title>
